# ChangeLog for dev-util/dialog
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/dialog/ChangeLog,v 1.62 2006/10/17 14:11:07 uberlord Exp $

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> dialog-1.0.20051107.ebuild:
  Added ~sparc-fbsd keyword.

  11 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  dialog-1.0.20051107.ebuild:
  Add ~x86-fbsd keyword.

  27 Mar 2006; Harald van Dĳk <truedfx@gentoo.org>
  dialog-1.0.20050206.ebuild, dialog-1.0.20050306.ebuild:
  Also have a clear error message for unicode in older versions

  14 Jan 2006; Harald van Dĳk <truedfx@gentoo.org>
  dialog-1.0.20051107.ebuild:
  unicode flag requires wide ncurses, immediately die with a clearer error
  message if that's not available (bug #67524)

  21 Nov 2005; Harald van Dĳk <truedfx@gentoo.org>
  dialog-1.0.20051107.ebuild:
  Don't install samples unless examples is in USE; bug #111508

*dialog-1.0.20051107 (20 Nov 2005)

  20 Nov 2005; Harald van Dĳk <truedfx@gentoo.org>
  +files/dialog-1.0.20051107-mouseselect.patch, -dialog-1.0.20040731.ebuild,
  +dialog-1.0.20051107.ebuild:
  Version bump + fix for bug #112024
  Update HOMEPAGE
  Remove old version

*dialog-1.0.20050306 (05 Jul 2005)

  05 Jul 2005; Daniel Black <dragonheart@gentoo.org>
  dialog-1.0.20050206.ebuild, +dialog-1.0.20050306.ebuild:
  dialog-1.0.20050206 nolonger on debian mirror (bug #91994).
  dialog-1.0.20050306 added that seems to fix one language and installation of
  samples

  20 Apr 2005; Bryan Østergaard <kloeri@gentoo.org>
  dialog-1.0.20050206.ebuild:
  Stable on alpha, bug 88396.

  16 Apr 2005; <gongloo@gentoo.org> dialog-1.0.20050206.ebuild:
  Stable on ppc-macos.

  11 Apr 2005; Joshua Kinard <kumba@gentoo.org> dialog-1.0.20050206.ebuild:
  Marked stable on mips.

  11 Apr 2005; Markus Rothe <corsair@gentoo.org> dialog-1.0.20050206.ebuild:
  Stable on ppc64

  09 Apr 2005; Simon Stelling <blubb@gentoo.org> dialog-1.0.20050206.ebuild: