@@ -1,0 +1,3 @@
+MD5 acfd843163394e8bb17c841fdbe9c4a4 dialog_1.0-20060221.orig.tar.gz 337415
+RMD160 e8863cc0c82699668a013c0b1ac416a85b939086 dialog_1.0-20060221.orig.tar.gz 337415
+SHA256 3eea497cf4547446402980a18ae5303c9d8163bf06e9d7bf095b441bd9db88aa dialog_1.0-20060221.orig.tar.gz 337415
