@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/dialog
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/dialog/ChangeLog,v 1.62 2006/10/17 14:11:07 uberlord Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/dialog/ChangeLog,v 1.63 2007/01/17 13:14:05 truedfx Exp $
+
+*dialog-1.0.20060221 (17 Jan 2007)
+
+  17 Jan 2007; Harald van Dĳk <truedfx@gentoo.org>
+  +dialog-1.0.20060221.ebuild:
+  Version bump
 
   17 Oct 2006; Roy Marples <uberlord@gentoo.org> dialog-1.0.20051107.ebuild:
   Added ~sparc-fbsd keyword.
